--- a/notebooks/numpy-py.ipynb
+++ b/notebooks/numpy-py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,6 +108,15 @@
     "import numpy as np\n",
     "import json\n",
     "print(json.dumps(np.arange(120).reshape([-1,3]).tolist()), flush=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.add"
    ]
   },
   {
@@ -392,6 +401,36 @@
    ],
    "source": [
     "np.arange(120).reshape(2,3,4,5)[..., 0,0,0,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.arange(12).reshape((3,4))\n",
+    "y = x[0:1:3, 1:3]\n",
+    "print(y.base)\n",
+    "y = x[..., 1:3]\n",
+    "print(y.base)\n",
+    "\n",
+    "y = x[0, 1:3]\n",
+    "print(y.base)\n",
+    "\n",
+    "y = x[np.ones_like(x, dtype=bool)]\n",
+    "print(y.base)\n"
    ]
   }
  ],
