Updated assign operators

--- a/notebooks/numpy-py.ipynb
+++ b/notebooks/numpy-py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,8 @@
       "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
       "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
       "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
-      "None\n"
+      "None\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n"
      ]
     }
    ],
@@ -430,7 +431,18 @@
     "print(y.base)\n",
     "\n",
     "y = x[np.ones_like(x, dtype=bool)]\n",
-    "print(y.base)\n"
+    "print(y.base)\n",
+    "\n",
+    "print(x.ravel().base)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.isclose"
    ]
   }
  ],
