Implementing composition of simpleIndexes

--- a/notebooks/numpy-py.ipynb
+++ b/notebooks/numpy-py.ipynb
@@ -2,11 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Interval(-10.02, -6.0, closed='right'),\n",
+       " Interval(-10.02, -6.0, closed='right'),\n",
+       " Interval(-10.02, -6.0, closed='right'),\n",
+       " Interval(-10.02, -6.0, closed='right'),\n",
+       " Interval(-6.0, -2.0, closed='right'),\n",
+       " Interval(-6.0, -2.0, closed='right'),\n",
+       " Interval(-6.0, -2.0, closed='right'),\n",
+       " Interval(-6.0, -2.0, closed='right'),\n",
+       " Interval(-2.0, 2.0, closed='right'),\n",
+       " Interval(-2.0, 2.0, closed='right'),\n",
+       " Interval(-2.0, 2.0, closed='right'),\n",
+       " Interval(-2.0, 2.0, closed='right'),\n",
+       " Interval(2.0, 6.0, closed='right'),\n",
+       " Interval(2.0, 6.0, closed='right'),\n",
+       " Interval(2.0, 6.0, closed='right'),\n",
+       " Interval(2.0, 6.0, closed='right'),\n",
+       " Interval(6.0, 10.0, closed='right'),\n",
+       " Interval(6.0, 10.0, closed='right'),\n",
+       " Interval(6.0, 10.0, closed='right'),\n",
+       " Interval(6.0, 10.0, closed='right')]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "# import pandas as pd\n",
+    "\n",
+    "# x = np.linspace(-10,10,20)\n",
+    "# [*pd.cut(x, bins=5)]"
    ]
   },
   {
