Organizing slices into AxisIndex and AxesIndex

--- a/notebooks/numpy-py.ipynb
+++ b/notebooks/numpy-py.ipynb
@@ -2,45 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[Interval(-10.02, -6.0, closed='right'),\n",
-       " Interval(-10.02, -6.0, closed='right'),\n",
-       " Interval(-10.02, -6.0, closed='right'),\n",
-       " Interval(-10.02, -6.0, closed='right'),\n",
-       " Interval(-6.0, -2.0, closed='right'),\n",
-       " Interval(-6.0, -2.0, closed='right'),\n",
-       " Interval(-6.0, -2.0, closed='right'),\n",
-       " Interval(-6.0, -2.0, closed='right'),\n",
-       " Interval(-2.0, 2.0, closed='right'),\n",
-       " Interval(-2.0, 2.0, closed='right'),\n",
-       " Interval(-2.0, 2.0, closed='right'),\n",
-       " Interval(-2.0, 2.0, closed='right'),\n",
-       " Interval(2.0, 6.0, closed='right'),\n",
-       " Interval(2.0, 6.0, closed='right'),\n",
-       " Interval(2.0, 6.0, closed='right'),\n",
-       " Interval(2.0, 6.0, closed='right'),\n",
-       " Interval(6.0, 10.0, closed='right'),\n",
-       " Interval(6.0, 10.0, closed='right'),\n",
-       " Interval(6.0, 10.0, closed='right'),\n",
-       " Interval(6.0, 10.0, closed='right')]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9]\n"
+     ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "# import pandas as pd\n",
-    "\n",
-    "# x = np.linspace(-10,10,20)\n",
-    "# [*pd.cut(x, bins=5)]"
+    "print(np.arange(10)[-1:])"
    ]
   },
   {
