Organizing slices into AxisIndex and AxesIndex. Test passed

--- a/notebooks/numpy-py.ipynb
+++ b/notebooks/numpy-py.ipynb
@@ -28,6 +28,334 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[    0     1     2 ...   147   148   149]\n",
+      "  [  150   151   152 ...   297   298   299]\n",
+      "  [  300   301   302 ...   447   448   449]\n",
+      "  [  450   451   452 ...   597   598   599]\n",
+      "  [  600   601   602 ...   747   748   749]]\n",
+      "\n",
+      " [[  750   751   752 ...   897   898   899]\n",
+      "  [  900   901   902 ...  1047  1048  1049]\n",
+      "  [ 1050  1051  1052 ...  1197  1198  1199]\n",
+      "  [ 1200  1201  1202 ...  1347  1348  1349]\n",
+      "  [ 1350  1351  1352 ...  1497  1498  1499]]\n",
+      "\n",
+      " [[ 1500  1501  1502 ...  1647  1648  1649]\n",
+      "  [ 1650  1651  1652 ...  1797  1798  1799]\n",
+      "  [ 1800  1801  1802 ...  1947  1948  1949]\n",
+      "  [ 1950  1951  1952 ...  2097  2098  2099]\n",
+      "  [ 2100  2101  2102 ...  2247  2248  2249]]\n",
+      "\n",
+      " ...\n",
+      "\n",
+      " [[12750 12751 12752 ... 12897 12898 12899]\n",
+      "  [12900 12901 12902 ... 13047 13048 13049]\n",
+      "  [13050 13051 13052 ... 13197 13198 13199]\n",
+      "  [13200 13201 13202 ... 13347 13348 13349]\n",
+      "  [13350 13351 13352 ... 13497 13498 13499]]\n",
+      "\n",
+      " [[13500 13501 13502 ... 13647 13648 13649]\n",
+      "  [13650 13651 13652 ... 13797 13798 13799]\n",
+      "  [13800 13801 13802 ... 13947 13948 13949]\n",
+      "  [13950 13951 13952 ... 14097 14098 14099]\n",
+      "  [14100 14101 14102 ... 14247 14248 14249]]\n",
+      "\n",
+      " [[14250 14251 14252 ... 14397 14398 14399]\n",
+      "  [14400 14401 14402 ... 14547 14548 14549]\n",
+      "  [14550 14551 14552 ... 14697 14698 14699]\n",
+      "  [14700 14701 14702 ... 14847 14848 14849]\n",
+      "  [14850 14851 14852 ... 14997 14998 14999]]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<slot wrapper '__repr__' of 'numpy.ndarray' objects>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(np.arange(15000).reshape(20, 5,-1))\n",
+    "\n",
+    "np.ndarray.__repr__\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[    0]\n",
+      "   [    1]\n",
+      "   [    2]\n",
+      "   ...\n",
+      "   [  147]\n",
+      "   [  148]\n",
+      "   [  149]]\n",
+      "\n",
+      "  [[  150]\n",
+      "   [  151]\n",
+      "   [  152]\n",
+      "   ...\n",
+      "   [  297]\n",
+      "   [  298]\n",
+      "   [  299]]\n",
+      "\n",
+      "  [[  300]\n",
+      "   [  301]\n",
+      "   [  302]\n",
+      "   ...\n",
+      "   [  447]\n",
+      "   [  448]\n",
+      "   [  449]]\n",
+      "\n",
+      "  [[  450]\n",
+      "   [  451]\n",
+      "   [  452]\n",
+      "   ...\n",
+      "   [  597]\n",
+      "   [  598]\n",
+      "   [  599]]\n",
+      "\n",
+      "  [[  600]\n",
+      "   [  601]\n",
+      "   [  602]\n",
+      "   ...\n",
+      "   [  747]\n",
+      "   [  748]\n",
+      "   [  749]]]\n",
+      "\n",
+      "\n",
+      " [[[  750]\n",
+      "   [  751]\n",
+      "   [  752]\n",
+      "   ...\n",
+      "   [  897]\n",
+      "   [  898]\n",
+      "   [  899]]\n",
+      "\n",
+      "  [[  900]\n",
+      "   [  901]\n",
+      "   [  902]\n",
+      "   ...\n",
+      "   [ 1047]\n",
+      "   [ 1048]\n",
+      "   [ 1049]]\n",
+      "\n",
+      "  [[ 1050]\n",
+      "   [ 1051]\n",
+      "   [ 1052]\n",
+      "   ...\n",
+      "   [ 1197]\n",
+      "   [ 1198]\n",
+      "   [ 1199]]\n",
+      "\n",
+      "  [[ 1200]\n",
+      "   [ 1201]\n",
+      "   [ 1202]\n",
+      "   ...\n",
+      "   [ 1347]\n",
+      "   [ 1348]\n",
+      "   [ 1349]]\n",
+      "\n",
+      "  [[ 1350]\n",
+      "   [ 1351]\n",
+      "   [ 1352]\n",
+      "   ...\n",
+      "   [ 1497]\n",
+      "   [ 1498]\n",
+      "   [ 1499]]]\n",
+      "\n",
+      "\n",
+      " [[[ 1500]\n",
+      "   [ 1501]\n",
+      "   [ 1502]\n",
+      "   ...\n",
+      "   [ 1647]\n",
+      "   [ 1648]\n",
+      "   [ 1649]]\n",
+      "\n",
+      "  [[ 1650]\n",
+      "   [ 1651]\n",
+      "   [ 1652]\n",
+      "   ...\n",
+      "   [ 1797]\n",
+      "   [ 1798]\n",
+      "   [ 1799]]\n",
+      "\n",
+      "  [[ 1800]\n",
+      "   [ 1801]\n",
+      "   [ 1802]\n",
+      "   ...\n",
+      "   [ 1947]\n",
+      "   [ 1948]\n",
+      "   [ 1949]]\n",
+      "\n",
+      "  [[ 1950]\n",
+      "   [ 1951]\n",
+      "   [ 1952]\n",
+      "   ...\n",
+      "   [ 2097]\n",
+      "   [ 2098]\n",
+      "   [ 2099]]\n",
+      "\n",
+      "  [[ 2100]\n",
+      "   [ 2101]\n",
+      "   [ 2102]\n",
+      "   ...\n",
+      "   [ 2247]\n",
+      "   [ 2248]\n",
+      "   [ 2249]]]\n",
+      "\n",
+      "\n",
+      " ...\n",
+      "\n",
+      "\n",
+      " [[[12750]\n",
+      "   [12751]\n",
+      "   [12752]\n",
+      "   ...\n",
+      "   [12897]\n",
+      "   [12898]\n",
+      "   [12899]]\n",
+      "\n",
+      "  [[12900]\n",
+      "   [12901]\n",
+      "   [12902]\n",
+      "   ...\n",
+      "   [13047]\n",
+      "   [13048]\n",
+      "   [13049]]\n",
+      "\n",
+      "  [[13050]\n",
+      "   [13051]\n",
+      "   [13052]\n",
+      "   ...\n",
+      "   [13197]\n",
+      "   [13198]\n",
+      "   [13199]]\n",
+      "\n",
+      "  [[13200]\n",
+      "   [13201]\n",
+      "   [13202]\n",
+      "   ...\n",
+      "   [13347]\n",
+      "   [13348]\n",
+      "   [13349]]\n",
+      "\n",
+      "  [[13350]\n",
+      "   [13351]\n",
+      "   [13352]\n",
+      "   ...\n",
+      "   [13497]\n",
+      "   [13498]\n",
+      "   [13499]]]\n",
+      "\n",
+      "\n",
+      " [[[13500]\n",
+      "   [13501]\n",
+      "   [13502]\n",
+      "   ...\n",
+      "   [13647]\n",
+      "   [13648]\n",
+      "   [13649]]\n",
+      "\n",
+      "  [[13650]\n",
+      "   [13651]\n",
+      "   [13652]\n",
+      "   ...\n",
+      "   [13797]\n",
+      "   [13798]\n",
+      "   [13799]]\n",
+      "\n",
+      "  [[13800]\n",
+      "   [13801]\n",
+      "   [13802]\n",
+      "   ...\n",
+      "   [13947]\n",
+      "   [13948]\n",
+      "   [13949]]\n",
+      "\n",
+      "  [[13950]\n",
+      "   [13951]\n",
+      "   [13952]\n",
+      "   ...\n",
+      "   [14097]\n",
+      "   [14098]\n",
+      "   [14099]]\n",
+      "\n",
+      "  [[14100]\n",
+      "   [14101]\n",
+      "   [14102]\n",
+      "   ...\n",
+      "   [14247]\n",
+      "   [14248]\n",
+      "   [14249]]]\n",
+      "\n",
+      "\n",
+      " [[[14250]\n",
+      "   [14251]\n",
+      "   [14252]\n",
+      "   ...\n",
+      "   [14397]\n",
+      "   [14398]\n",
+      "   [14399]]\n",
+      "\n",
+      "  [[14400]\n",
+      "   [14401]\n",
+      "   [14402]\n",
+      "   ...\n",
+      "   [14547]\n",
+      "   [14548]\n",
+      "   [14549]]\n",
+      "\n",
+      "  [[14550]\n",
+      "   [14551]\n",
+      "   [14552]\n",
+      "   ...\n",
+      "   [14697]\n",
+      "   [14698]\n",
+      "   [14699]]\n",
+      "\n",
+      "  [[14700]\n",
+      "   [14701]\n",
+      "   [14702]\n",
+      "   ...\n",
+      "   [14847]\n",
+      "   [14848]\n",
+      "   [14849]]\n",
+      "\n",
+      "  [[14850]\n",
+      "   [14851]\n",
+      "   [14852]\n",
+      "   ...\n",
+      "   [14997]\n",
+      "   [14998]\n",
+      "   [14999]]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.arange(15000).reshape(20, 5,-1, 1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
