Implemented a printer. Not the best though

--- a/notebooks/numpy-print.ipynb
+++ b/notebooks/numpy-print.ipynb
@@ -61,18 +61,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Name, Age,         City \n",
+      " John,  25,     New York \n",
+      "Alice,  30,  Los Angeles \n",
+      "  Bob,  22,      Chicago \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "function alignColumns(inputString, delimiter = ',') {\n",
+    "  // Split the input string into rows\n",
+    "  const rows = inputString.split('\\n');\n",
+    "  // Initialize an array to store the maximum width of each column\n",
+    "  const columnWidths = Array(rows[0].split(delimiter).length).fill(0);\n",
+    "  // Find the maximum width for each column\n",
+    "  for (const row of rows) {\n",
+    "    let columns = row.split(delimiter);\n",
+    "    for (let i = 0; i < columns.length; i++) {\n",
+    "      columnWidths[i] = Math.max(columnWidths[i], columns[i].trim().length);\n",
+    "    }\n",
+    "  }\n",
+    "  // Build the formatted output\n",
+    "  let formattedString = '';\n",
+    "  for (const row of rows) {\n",
+    "    let columns = row.split(delimiter);\n",
+    "    columns = columns.map((s, i) => i == columns.length - 1 ? s : s + delimiter);\n",
+    "    for (let i = 0; i < columns.length; i++) {\n",
+    "      const column = columns[i].trim();\n",
+    "      formattedString += column.padStart(columnWidths[i] + 1).padEnd(columnWidths[i] + 2);\n",
+    "    }\n",
+    "    formattedString += '\\n';\n",
+    "  }\n",
+    "\n",
+    "  return formattedString;\n",
+    "}\n",
+    "\n",
+    "// Example usage:\n",
+    "var inputString = \"Name,Age,City\\nJohn,25,New York\\nAlice,30,Los Angeles\\nBob,22,Chicago\";\n",
+    "var formattedString = alignColumns(inputString, ',');\n",
+    "console.log(formattedString);\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "var s  = `Arr([[[[0], [1], [2], [3], [4], [5], [6], [7], [8], [9]],\n",
+    "  [[10], [11], [12], [13], [14], [15], [16], [17], [18], [19]],\n",
+    "  [[20], [21], [22], [23], [24], [25], [26], [27], [28], [29]],\n",
+    "  [[30], [31], [32], [33], [34], [35], [36], [37], [38], [39]],\n",
+    "  [[40], [41], [42], [43], [44], [45], [46], [47], [48], [49]],\n",
+    "  [[50], [51], [52], [53], [54], [55], [56], [57], [58], [59]],\n",
+    "  [[60], [61], [62], [63], [64], [65], [66], [67], [68], [69]],\n",
+    "  [[70], [71], [72], [73], [74], [75], [76], [77], [78], [79]],\n",
+    "  [[80], [81], [82], [83], [84], [85], [86], [87], [88], [89]],\n",
+    "  [[90], [91], [92], [93], [94], [95], [96], [97], [98], [99]]],\n",
+    " ...,\n",
+    " [[[9900], [9901], [9902], [9903], [9904], [9905], [9906], [9907], [9908], [9909]],\n",
+    "  [[9910], [9911], [9912], [9913], [9914], [9915], [9916], [9917], [9918], [9919]],\n",
+    "  [[9920], [9921], [9922], [9923], [9924], [9925], [9926], [9927], [9928], [9929]],\n",
+    "  [[9930], [9931], [9932], [9933], [9934], [9935], [9936], [9937], [9938], [9939]],\n",
+    "  [[9940], [9941], [9942], [9943], [9944], [9945], [9946], [9947], [9948], [9949]],\n",
+    "  [[9950], [9951], [9952], [9953], [9954], [9955], [9956], [9957], [9958], [9959]],\n",
+    "  [[9960], [9961], [9962], [9963], [9964], [9965], [9966], [9967], [9968], [9969]],\n",
+    "  [[9970], [9971], [9972], [9973], [9974], [9975], [9976], [9977], [9978], [9979]],\n",
+    "  [[9980], [9981], [9982], [9983], [9984], [9985], [9986], [9987], [9988], [9989]],\n",
+    "  [[9990], [9991], [9992], [9993], [9994], [9995], [9996], [9997], [9998], [9999]]\n",
+    "`;\n",
+    "\n",
+    "s = alignColumns(s, ',');\n",
+    "\n",
+    "var nBrackets1 = s.match(/.*?\\((\\[*)/)[1].length;\n",
+    "var nBrackets2 = s.match(/.*?\\n\\s*(\\[*)/)[1].length;\n",
+    "console.log(nBrackets)\n",
+    "\n",
+    "// s.match(new RegExp('.*'+'\\['.repeat(nBrackets)))\n",
+    "\n",
+    "\n",
+    "//console.log(s)\n"
    ]
   },
   {
