Found a method to split the files, friendly with Intellisense and with me

--- a/notebooks/numpy-print.ipynb
+++ b/notebooks/numpy-print.ipynb
@@ -112,13 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "4\n",
       "2\n"
      ]
     }
@@ -151,7 +152,8 @@
     "\n",
     "var nBrackets1 = s.match(/.*?\\((\\[*)/)[1].length;\n",
     "var nBrackets2 = s.match(/.*?\\n\\s*(\\[*)/)[1].length;\n",
-    "console.log(nBrackets)\n",
+    "console.log(nBrackets1)\n",
+    "console.log(nBrackets2)\n",
     "\n",
     "// s.match(new RegExp('.*'+'\\['.repeat(nBrackets)))\n",
     "\n",
@@ -161,10 +163,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true\n",
+      "true\n",
+      "true\n",
+      "true\n"
+     ]
+    }
+   ],
+   "source": [
+    "var MyArray = require('../index');\n",
+    "var a =  MyArray.prototype.zeros([20,20])\n",
+    "\n",
+    "MyArray.prototype.test = function(A){\n",
+    "  if(this instanceof MyArray) return MyArray.prototype.test(this,...arguments)\n",
+    "  console.log(this===MyArray.prototype)\n",
+    "  console.log(A===a)\n",
+    "}\n",
+    "MyArray.prototype.testFactory = function(){\n",
+    "  return function(A){\n",
+    "    if(this instanceof MyArray) return MyArray.prototype.test(this,...arguments)\n",
+    "    console.log(this===MyArray.prototype)\n",
+    "    console.log(A===a)\n",
+    "  }\n",
+    "}\n",
+    "MyArray.prototype.test2 = MyArray.prototype.testFactory()\n",
+    "\n",
+    "\n",
+    "a.test()\n",
+    "a.test()\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
