Changing all NDArray.prototype.methodOrFunction to separate methods and functions. Tests failing

--- a/notebooks/numpy.ipynb
+++ b/notebooks/numpy.ipynb
@@ -2,35 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "Error",
-     "evalue": "Unrecognized method sum",
-     "output_type": "error",
-     "traceback": [
-      "/mnt/data/documents/projects/numpy-js/core-grammar.js:172",
-      "      if (func === undefined) throw new Error(`Unrecognized method ${name}`)",
-      "                              ^",
-      "",
-      "Error: Unrecognized method sum",
-      "    at Semantics.Wrapper.Arr_method (/mnt/data/documents/projects/numpy-js/core-grammar.js:172:37)",
-      "    at Operation.execute (/mnt/data/documents/projects/numpy-js/node_modules/.pnpm/ohm-js@17.1.0/node_modules/ohm-js/dist/ohm.cjs:4296:25)",
-      "    at Semantics.Wrapper.doIt [as parse] (/mnt/data/documents/projects/numpy-js/node_modules/.pnpm/ohm-js@17.1.0/node_modules/ohm-js/dist/ohm.cjs:4030:29)",
-      "    at Semantics.Wrapper.<anonymous> (/mnt/data/documents/projects/numpy-js/node_modules/.pnpm/ohm-js@17.1.0/node_modules/ohm-js/dist/ohm.cjs:4149:19)",
-      "    at Operation.execute (/mnt/data/documents/projects/numpy-js/node_modules/.pnpm/ohm-js@17.1.0/node_modules/ohm-js/dist/ohm.cjs:4312:39)",
-      "    at Semantics.Wrapper.doIt [as parse] (/mnt/data/documents/projects/numpy-js/node_modules/.pnpm/ohm-js@17.1.0/node_modules/ohm-js/dist/ohm.cjs:4030:29)",
-      "    at Semantics.Wrapper.<anonymous> (/mnt/data/documents/projects/numpy-js/node_modules/.pnpm/ohm-js@17.1.0/node_modules/ohm-js/dist/ohm.cjs:4149:19)",
-      "    at Operation.execute (/mnt/data/documents/projects/numpy-js/node_modules/.pnpm/ohm-js@17.1.0/node_modules/ohm-js/dist/ohm.cjs:4312:39)",
-      "    at Semantics.Wrapper.doIt [as parse] (/mnt/data/documents/projects/numpy-js/node_modules/.pnpm/ohm-js@17.1.0/node_modules/ohm-js/dist/ohm.cjs:4030:29)",
-      "    at Semantics.Wrapper.BinaryOperation (/mnt/data/documents/projects/numpy-js/core-grammar.js:231:18)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ [ 1, 2 ], [ 3, 6 ], [ 9, 10 ] ]\n",
+      "[ [ [ 1, 2 ] ], [ [ 3, 6 ] ], [ [ 9, 10 ] ] ]\n"
      ]
     }
    ],
    "source": [
     "//@ts-check\n",
-    "\n",
     "var np = require('../index');\n",
     "\n",
     "\n",
@@ -39,7 +24,10 @@
     "\n",
     "\n",
     "var a = np`np.array(([1,2], [3,6], [9, 10]))`\n",
-    "np`${a.toJS()}.sum(axis=0)`\n"
+    "np`${a.toJS()}.sum(axis=0)`\n",
+    "\n",
+    "console.log(a.toJS())\n",
+    "console.log(a.slice('::', 'None').toJS())"
    ]
   },
   {
