Implementing transform. Bug found

--- a/notebooks/numpy-py.ipynb
+++ b/notebooks/numpy-py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,39 +11,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2, 10, 12)\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object cannot be interpreted as an integer",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/carlos/Documents/projects/numpy-js/notebooks/numpy-py.ipynb Cell 2\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/carlos/Documents/projects/numpy-js/notebooks/numpy-py.ipynb#X34sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m arr \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marange(\u001b[39m120\u001b[39m)\u001b[39m.\u001b[39mreshape((\u001b[39m10\u001b[39m,\u001b[39m12\u001b[39m))\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/carlos/Documents/projects/numpy-js/notebooks/numpy-py.ipynb#X34sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(np\u001b[39m.\u001b[39mapply_along_axis(\u001b[39mlambda\u001b[39;00m arr: np\u001b[39m.\u001b[39marray([arr, arr]), axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, arr\u001b[39m=\u001b[39marr)\u001b[39m.\u001b[39mshape)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/carlos/Documents/projects/numpy-js/notebooks/numpy-py.ipynb#X34sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(np\u001b[39m.\u001b[39;49mapply_along_axis(\u001b[39mlambda\u001b[39;49;00m arr: np\u001b[39m.\u001b[39;49msum(arr), axis\u001b[39m=\u001b[39;49m\u001b[39mNone\u001b[39;49;00m, arr\u001b[39m=\u001b[39;49marr)\u001b[39m.\u001b[39mshape)\n",
-      "File \u001b[0;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36mapply_along_axis\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/numpy/lib/shape_base.py:361\u001b[0m, in \u001b[0;36mapply_along_axis\u001b[0;34m(func1d, axis, arr, *args, **kwargs)\u001b[0m\n\u001b[1;32m    359\u001b[0m arr \u001b[39m=\u001b[39m asanyarray(arr)\n\u001b[1;32m    360\u001b[0m nd \u001b[39m=\u001b[39m arr\u001b[39m.\u001b[39mndim\n\u001b[0;32m--> 361\u001b[0m axis \u001b[39m=\u001b[39m normalize_axis_index(axis, nd)\n\u001b[1;32m    363\u001b[0m \u001b[39m# arr, with the iteration axis at the end\u001b[39;00m\n\u001b[1;32m    364\u001b[0m in_dims \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mrange\u001b[39m(nd))\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object cannot be interpreted as an integer"
+      "(2, 2, 5, 4, 5)\n",
+      "(2, 1, 4, 5)\n"
      ]
     }
    ],
    "source": [
-    "arr = np.arange(120).reshape((10,12))\n",
+    "arr = np.arange(120).reshape((2, 3, 4, 5))\n",
     "\n",
-    "print(np.apply_along_axis(lambda arr: np.array([arr, arr]), axis=0, arr=arr).shape)\n"
+    "print(\n",
+    "    np.apply_along_axis(lambda arr: np.array([[*arr, 0, 1]] * 2), axis=1, arr=arr).shape\n",
+    ")\n",
+    "print(np.apply_along_axis(lambda arr: [np.sum(arr)], axis=1, arr=arr).shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -52,10 +43,29 @@
      "text": [
       "[9]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1.]]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(np.arange(10)[-1:])"
+    "print(np.arange(10)[-1:])\n",
+    "\n",
+    "\n",
+    "np.ones((2,3,4,))"
    ]
   },
   {
