Implemented index notation. implementing stack and concatenate

--- a/notebooks/notation-decision-index.ipynb
+++ b/notebooks/notation-decision-index.ipynb
@@ -129,7 +129,21 @@
     "x.op('+', [B, C, D]) // NO. this will confuse if B,C,D are JS arrays. So maybe\n",
     "x.op('+...', B, C, D)\n",
     "// instead of\n",
-    "x.op('+', B).op('+', C).op('+', D)\n"
+    "x.op('+', B).op('+', C).op('+', D)\n",
+    "\n",
+    "\n",
+    "// Will it make more sense to have this?\n",
+    "\n",
+    "x = arr.view(...advancedIndex).op('+=', B)\n",
+    "// or simply\n",
+    "x = arr.index(...advancedIndex).op('+=', B)\n",
+    "// and\n",
+    "x = arr.index(...advancedIndex).copy()\n",
+    "// But I can't warn... Let's leave the proposal as it is...\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
