--- a/notebooks/numpy-py.ipynb
+++ b/notebooks/numpy-py.ipynb
@@ -7,7 +7,9 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "np.transpose"
+    "np.transpose\n",
+    "np.concatenate\n",
+    "np.stack"
    ]
   },
   {
