--- a/notebooks/readme-tests.ipynb
+++ b/notebooks/readme-tests.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,8 @@
      "text": [
       "[ 51 ] -10\n",
       "[ 51 ] 0\n",
-      "true\n"
+      "true\n",
+      "[ 9.6, 3.6, 2.4 ]\n"
      ]
     }
    ],
@@ -44,7 +45,8 @@
     "var x_abs = x.copy();\n",
     "np`${x_abs}[${x_abs} < 0] *= -1`\n",
     "console.log(x_abs.shape, x_abs.min()); // [ 51 ] 0\n",
-    "console.log(np.allclose(x_abs, np.abs(x))); // true"
+    "console.log(np.allclose(x_abs, np.abs(x))); // true\n",
+    "console.log(np`${x_abs}[1:-20:15].round(3)`.JS()); // [ 9.6, 3.6, 2.4 ]"
    ]
   },
   {
