Added a live demo and fixed an indexing bug

--- a/notebooks/normal-scatter.ipynb
+++ b/notebooks/normal-scatter.ipynb
@@ -24,7 +24,6 @@
     "\n",
     "\n",
     "var document = new JSDOM(\"\").window.document;\n",
-    "var [x, y] = np.JS`np.random.randn((2, 1000))`\n",
     "\n",
     "// set the dimensions and margins of the graph\n",
     "var margin = { top: 10, right: 30, bottom: 30, left: 60 },\n",
@@ -55,6 +54,10 @@
     "  .call(d3.axisLeft(axisY));\n",
     "\n",
     "// Add dots\n",
+    "\n",
+    "var XY = np`np.random.randn((2, 1000))`\n",
+    "var [x, y] = XY.T.tolist();\n",
+    "\n",
     "svg.append('g')\n",
     "  .selectAll(\"dot\")\n",
     "  .data(x.map((_,i)=>[x[i], y[i]]))\n",
@@ -65,6 +68,19 @@
     "  .attr(\"r\", 1.5)\n",
     "  .style(\"fill\", \"#69b3a2\");\n",
     "\n",
+    "// Add dots in a circle\n",
+    "var norm = XY.pow(2).sum({axis: -1, keepdims:true}).pow(0.5);\n",
+    "var XY_circle = XY.op('/', norm);\n",
+    "\n",
+    "svg.append('g')\n",
+    "  .selectAll(\"dot\")\n",
+    "  .data(XY_circle.T.tolist())\n",
+    "  .enter()\n",
+    "  .append(\"circle\")\n",
+    "  .attr(\"cx\", function (d) { return axisX(d[0]); })\n",
+    "  .attr(\"cy\", function (d) { return axisY(d[1]); })\n",
+    "  .attr(\"r\", 1.5)\n",
+    "  .style(\"fill\", \"#b36969\");\n",
     "\n",
     "$$.html(document.body.innerHTML);"
    ]
